appId: host.exp.Exponent
---
- launchApp
- tapOn: "TopShows" #Expo shell app
- tapOn: "Open Webview" #React native app
- tapOn: "More information..." # Webview
- tapOn: "Share" #Native
- tapOn: "reading list" #System share button
- tapOn: "Add" #System dialog